{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 78,
  "lineage": "7472bc0e-880a-9979-f6c1-37866d3dd9f1",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080e1f13689e07408",
            "arn": "arn:aws:ec2:us-east-1:535556339197:instance/i-00043387dbd01f955",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00043387dbd01f955",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "lamp-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bcc89c1ceefdb603",
            "private_dns": "ip-10-0-1-152.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.152",
            "public_dns": "ec2-18-205-159-101.compute-1.amazonaws.com",
            "public_ip": "18.205.159.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ee4027b1d6941b19",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b8fb322b741f9478",
            "tags": {
              "Environment": "Dev",
              "Name": "web_server"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "web_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cf9df5b31cba7cbe"
            ]
          },
          "dependencies": [
            "module.key-pair.aws_key_pair.deployer",
            "module.key-pair.tls_private_key.web-key",
            "module.sg.aws_security_group.allow_web",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:security-group/sg-0cf9df5b31cba7cbe",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf9df5b31cba7cbe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSHrom VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "535556339197",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f602cd6b9fe39246"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:security-group/sg-033a0d15f58b5f6a2",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-033a0d15f58b5f6a2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cf9df5b31cba7cbe"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DB-sg",
            "name_prefix": "",
            "owner_id": "535556339197",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg"
            },
            "tags_all": {
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f602cd6b9fe39246"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.allow_web",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f1147459687f47f7",
            "association_id": "eipassoc-0a4c77cf9441d94b5",
            "domain": "vpc",
            "id": "eipalloc-0f1147459687f47f7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f74969122cafc693",
            "private_dns": "ip-10-0-1-57.ec2.internal",
            "private_ip": "10.0.1.57",
            "public_dns": "ec2-50-16-100-254.compute-1.amazonaws.com",
            "public_ip": "50.16.100.254",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-1"
            },
            "tags_all": {
              "Name": "eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.app_ig",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b3b0591406db13c",
            "association_id": "eipassoc-021264e18fe9c0cea",
            "domain": "vpc",
            "id": "eipalloc-02b3b0591406db13c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03408627b829eed07",
            "private_dns": "ip-10-0-1-168.ec2.internal",
            "private_ip": "10.0.1.168",
            "public_dns": "ec2-52-7-206-243.compute-1.amazonaws.com",
            "public_ip": "52.7.206.243",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-2"
            },
            "tags_all": {
              "Name": "eip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.app_ig",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:internet-gateway/igw-0b43601f552af42ed",
            "id": "igw-0b43601f552af42ed",
            "owner_id": "535556339197",
            "tags": {
              "Name": "MyIGW"
            },
            "tags_all": {
              "Name": "MyIGW"
            },
            "vpc_id": "vpc-0f602cd6b9fe39246"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "web_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f1147459687f47f7",
            "association_id": "eipassoc-0a4c77cf9441d94b5",
            "connectivity_type": "public",
            "id": "nat-08655d1a73c8d0f6e",
            "network_interface_id": "eni-0f74969122cafc693",
            "private_ip": "10.0.1.57",
            "public_ip": "50.16.100.254",
            "subnet_id": "subnet-0b8fb322b741f9478",
            "tags": {
              "Name": "nat-gateway 1"
            },
            "tags_all": {
              "Name": "nat-gateway 1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.web_eip",
            "module.vpc.aws_internet_gateway.app_ig",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b3b0591406db13c",
            "association_id": "eipassoc-021264e18fe9c0cea",
            "connectivity_type": "public",
            "id": "nat-0cfef4e45d9082e49",
            "network_interface_id": "eni-03408627b829eed07",
            "private_ip": "10.0.1.168",
            "public_ip": "52.7.206.243",
            "subnet_id": "subnet-0b8fb322b741f9478",
            "tags": {
              "Name": "nat-gateway 2"
            },
            "tags_all": {
              "Name": "nat-gateway 2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.web_eip",
            "module.vpc.aws_internet_gateway.app_ig",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:route-table/rtb-08052e203ca3f8132",
            "id": "rtb-08052e203ca3f8132",
            "owner_id": "535556339197",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08655d1a73c8d0f6e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table 1"
            },
            "tags_all": {
              "Name": "private-route-table 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f602cd6b9fe39246"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.web_eip",
            "module.vpc.aws_internet_gateway.app_ig",
            "module.vpc.aws_nat_gateway.web_ngw",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:route-table/rtb-0e4d926268653f8da",
            "id": "rtb-0e4d926268653f8da",
            "owner_id": "535556339197",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cfef4e45d9082e49",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table 2"
            },
            "tags_all": {
              "Name": "private-route-table 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f602cd6b9fe39246"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.web_eip",
            "module.vpc.aws_internet_gateway.app_ig",
            "module.vpc.aws_nat_gateway.web_ngw",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:route-table/rtb-04de41d478e4abbc8",
            "id": "rtb-04de41d478e4abbc8",
            "owner_id": "535556339197",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b43601f552af42ed",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table-1"
            },
            "tags_all": {
              "Name": "public-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f602cd6b9fe39246"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.app_ig",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02956e4e26d4fcf9d",
            "route_table_id": "rtb-04de41d478e4abbc8",
            "subnet_id": "subnet-0b8fb322b741f9478"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.app_ig",
            "module.vpc.aws_route_table.rtb-public",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082c7ef77cb714a4d",
            "route_table_id": "rtb-08052e203ca3f8132",
            "subnet_id": "subnet-0e7591cf94de43a64"
          },
          "dependencies": [
            "module.vpc.aws_eip.web_eip",
            "module.vpc.aws_internet_gateway.app_ig",
            "module.vpc.aws_nat_gateway.web_ngw",
            "module.vpc.aws_route_table.rtb-private",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f20a0acdf5fef630",
            "route_table_id": "rtb-0e4d926268653f8da",
            "subnet_id": "subnet-08b3131b9c7cce58d"
          },
          "dependencies": [
            "module.vpc.aws_eip.web_eip",
            "module.vpc.aws_internet_gateway.app_ig",
            "module.vpc.aws_nat_gateway.web_ngw",
            "module.vpc.aws_route_table.rtb-private",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:subnet/subnet-0e7591cf94de43a64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7591cf94de43a64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535556339197",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0f602cd6b9fe39246"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:subnet/subnet-08b3131b9c7cce58d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b3131b9c7cce58d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535556339197",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0f602cd6b9fe39246"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:subnet/subnet-0b8fb322b741f9478",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8fb322b741f9478",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535556339197",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0f602cd6b9fe39246"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:vpc/vpc-0f602cd6b9fe39246",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d7ff25745dc1014a",
            "default_route_table_id": "rtb-015597f3bd535bec5",
            "default_security_group_id": "sg-009022c83448c4c1d",
            "dhcp_options_id": "dopt-02ea70b8c364cf899",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f602cd6b9fe39246",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-015597f3bd535bec5",
            "owner_id": "535556339197",
            "tags": {
              "Name": "web-vpc"
            },
            "tags_all": {
              "Name": "web-vpc"
            }
          }
        }
      ]
    }
  ]
}